at test classes replaced deprecated URL() with URI#.toURL()